[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jurn"
version = "1.0"
authors = [
  { name="Bert Wagner", email="bertwagner@bertwagner.com" },
]
description = "A tool for logging work progress throughout the week. Features autocomleting tags and pretty output."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bertwagner/jurn"